# zenith

./: .gitignore  README.md  dockerfile  justfile  prek.toml  pyproject.toml
.github/workflows/: ci.yaml
artifacts/models/: model.skops
data/processed/: processed_X_test.parquet  processed_X_train.parquet  processed_y_test.parquet  processed_y_train.parquet
data/raw/: raw_data.parquet
outputs/2026-03-13/23-51-57/.hydra/: hydra.yaml
outputs/2026-03-14/00-01-24/.hydra/: hydra.yaml
outputs/2026-03-14/00-16-26/.hydra/: hydra.yaml
outputs/2026-03-14/00-16-40/.hydra/: hydra.yaml
outputs/2026-03-14/00-18-12/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-14/00-20-13/.hydra/: hydra.yaml
outputs/2026-03-14/00-20-24/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/zenith/: __init__.py
src/zenith/app/: inference_endpoint.py  training_endpoint.py
src/zenith/conf/: config.yaml
src/zenith/conf/attrs/: attrs.yaml
src/zenith/conf/model/: model.yaml
src/zenith/conf/path/: path.yaml
src/zenith/conf/process/: process.yaml
src/zenith/conf/steps/: steps.yaml
src/zenith/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/zenith/scripts/: load.py  model.py  process.py  utils.py
