[project]
name = "zenith"
version = "0.1.0"
description = "Scalable Machine Learning Architecture"
readme = "README.md"
authors = [
    { name = "harish gehlot", email = "gehloth03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zenith = "zenith:main"
zenith_training = "zenith.app.training_endpoint:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
