[project]
name = "zenith"
version = "0.1.0"
description = "Scalable Machine Learning Architecture"
readme = "README.md"
authors = [
    { name = "harish gehlot", email = "gehloth03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "polars>=1.39.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]

[scripts]
zenith = "zenith.app.training_endpoint:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
    "rust-just>=1.46.0",
    "ty>=0.0.23",
]
